Fixed hotshow spacing issue

--- a/web/src/shared/components/HotShowPopup/style.scss
+++ b/web/src/shared/components/HotShowPopup/style.scss
@@ -230,6 +230,7 @@
                     background: #0077C8;
                     color: #FFF;
                     margin-top: 10px;
+                    margin-bottom: 5px;
                     @media(max-width: 860px){
                         font-size: 14px;
                         line-height: 18px;
